<<<<<<< HEAD
[gd_scene load_steps=9 format=3 uid="uid://cet08ei16o415"]

[ext_resource type="Script" path="res://Main/UI/main_menu/menu_script.gd" id="1_i6gwu"]
[ext_resource type="BankAsset" uid="uid://b5ahpb1v6h7eu" path="res://addons/FMOD/editor/resources/banks/{edbd8dcb-0752-4a13-8d20-26277182839a}.tres" id="2_1nemg"]
[ext_resource type="EventAsset" uid="uid://dgd04noaoinxg" path="res://addons/FMOD/editor/resources/events/{d6c5ff18-659e-4597-bc0b-e7096248beba}.tres" id="2_sttdg"]
[ext_resource type="BankAsset" uid="uid://d10c2i08vtu64" path="res://addons/FMOD/editor/resources/banks/{13cfbab9-cb0c-4ba4-9316-6d7fe24906ee}.tres" id="3_18y33"]
[ext_resource type="BankAsset" uid="uid://u1paqu5it1mm" path="res://addons/FMOD/editor/resources/banks/{dc3fb0fd-333a-4029-bd03-284f5d60f103}.tres" id="4_6epeq"]
[ext_resource type="BankAsset" uid="uid://cv0ogyleqic3b" path="res://addons/FMOD/editor/resources/banks/{3050b558-214b-4c81-be02-4ff0cad1614c}.tres" id="5_h0jyg"]
[ext_resource type="BankAsset" uid="uid://dla70070w4is3" path="res://addons/FMOD/editor/resources/banks/{a84d958c-5030-00c3-384b-c50e3b2267d4}.tres" id="6_ygu3u"]
[ext_resource type="Script" path="res://Main/UI/main_menu/FMOD_audio.gd" id="8_1p6v5"]
=======
[gd_scene load_steps=3 format=3 uid="uid://cet08ei16o415"]

[ext_resource type="Script" path="res://Main/UI/main_menu/menu_script.gd" id="1_i6gwu"]
[ext_resource type="PackedScene" uid="uid://bvrns7nrll4uu" path="res://Main/UI/main_menu/settings.tscn" id="2_og6hp"]
>>>>>>> 6bf1ea13017fd2d6c470bf02b7f9822d5bb7c653

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6gwu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="space" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="space2" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

<<<<<<< HEAD
[node name="StudioEventEmitter3D" type="StudioEventEmitter3D" parent="."]
event = ExtResource("2_sttdg")
preload_samples = true

[node name="StudioBankLoader" type="StudioBankLoader" parent="."]
load_on = 1
num_banks = 5
bank_0 = ExtResource("2_1nemg")
bank_1 = ExtResource("3_18y33")
bank_2 = ExtResource("4_6epeq")
bank_3 = ExtResource("5_h0jyg")
bank_4 = ExtResource("6_ygu3u")

[node name="Node2D" type="Node2D" parent="."]

[node name="StudioEventEmitter2D" type="StudioEventEmitter2D" parent="."]
play_event = 2
event = ExtResource("2_sttdg")
script = ExtResource("8_1p6v5")
event = ExtResource("2_sttdg")
=======
[node name="Settings" parent="." instance=ExtResource("2_og6hp")]
visible = false
layout_mode = 1
>>>>>>> 6bf1ea13017fd2d6c470bf02b7f9822d5bb7c653

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/Panel/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/Panel/VBoxContainer/done" to="." method="_on_done_pressed"]

[editable path="Settings"]
